tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_100.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (~ ((~ (z > z)) & ((200 * 1) <= (+ 2))));
               y := (((- (y DIV 2)) - ((200 * 200) - (2 - y))) DIV (((z + 0) - (+ y)) MOD (+ (200 + y))));
               x := (+ (((1 - z) * (- y)) + (- (2 + y))));
               r := ((+ ((- x) * (- z))) > (((2 MOD 1) + (y - z)) + ((0 DIV z) MOD (200 + x))));
               x := ((((x + x) + (- 2)) * ((- 2) - (- 1))) MOD (- ((200 + 200) + (2 * x))));
               z := ((((- 2) MOD (z DIV 1)) - (+ (1 DIV 200))) DIV ((+ (1223 DIV y)) DIV ((y DIV z) DIV (- y))));
               r := ((- ((x - y) - (x + 2))) < ((+ (+ 200)) MOD ((- z) + (z - 1))));
  (* error *)  q := ((((+ p) - (- 1)) >= ((y DIV 0) * (1223 MOD 2))) OR (((1 * 1223) DIV (y * 200)) > ((+ z) * (1 MOD y))));
               p := ((((- 2) * (1223 - z)) * ((1 * 1223) - (+ z))) = (((z - x) - (+ x)) - ((200 + 200) * (0 * 1223))));
               q := ((((0 MOD 200) MOD (0 - x)) - ((200 MOD 1223) - (+ y))) <= ((+ (+ 1)) - ((1223 * 2) + (1 + 200))))
END Test18.